Make sure card borders are visible in print media
By default, backgrounds aren't printed. Dark-mode card borders were too light to be seen on a white background.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -56,6 +56,14 @@ html {
         appearance: textfield;
     }
 
+    [data-bs-theme="dark"] .card {
+        border: $border-width solid $border-color;
+
+        .card-header {
+            border-bottom: $border-width solid $border-color;
+        }
+    }
+
     .col-print-1 {width:8%;  float:left;}
     .col-print-2 {width:16%; float:left;}
     .col-print-3 {width:25%; float:left;}
